// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Snapshots when all props and label/description with html should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-1s6q0wc-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
    htmlFor="id"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        id="id"
        type="checkbox"
        value="value"
      />
      <div
        className="css-1nrs9l4-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
      </div>
    </div>
    <div>
      Label
    </div>
  </label>
  <div
    className="fl-text css-1wy8lkz-Text-setSizeFonts-setSizeLineHeight e4p1v736"
    size="small"
  >
    <div>
      Description
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when all props should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-1s6q0wc-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
    htmlFor="id"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        id="id"
        type="checkbox"
        value="value"
      />
      <div
        className="css-1nrs9l4-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
      </div>
    </div>
    Label
  </label>
  <div
    className="fl-text css-1wy8lkz-Text-setSizeFonts-setSizeLineHeight e4p1v736"
    size="small"
  >
    Description
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots when checked should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-1s6q0wc-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        checked={true}
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="css-1nrs9l4-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`<Checkbox /> Snapshots when disabled should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-17miwjw-BaseLabel-Text-BaseLabel ev4kwu51"
    color="disabled"
    fontSize="text-s"
    fontWeight="bold"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        disabled={true}
        type="checkbox"
      />
      <div
        className="css-1nrs9l4-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`<Checkbox /> Snapshots when empty props should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-1s6q0wc-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        type="checkbox"
      />
      <div
        className="css-1nrs9l4-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`<Checkbox /> Snapshots when indeterminate should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-1s6q0wc-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        type="checkbox"
      />
      <div
        className="css-1gkbn5y-CheckboxCheckmarkWrapper-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
        <div
          className="css-1vsripa-CheckboxIndeterminate eo2dg7r2"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`<Checkbox /> Snapshots when not checked should render correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-1s6q0wc-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
  >
    <div
      className="css-1mcos5j-Wrapper eo2dg7r4"
    >
      <input
        checked={false}
        className="css-1kaw2q3-CheckboxInput eo2dg7r0"
        type="checkbox"
      />
      <div
        className="css-1nrs9l4-CheckboxCheckmarkWrapper eo2dg7r3"
      >
        <svg
          className="eo2dg7r1 cr-icon css-1kff150-StyledIcon-StyledIcon er8b7wo0"
          style={
            Object {
              "height": "0.65rem",
              "width": "0.65rem",
            }
          }
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="cr-icon__base cr-icon__base-1"
            d="M5.662 12.508c.656.686 1.735.65 2.345-.079l5.6-6.68c.58-.692.51-1.74-.157-2.342a1.561 1.561 0 0 0-2.259.164L6.802 8.81 4.738 6.822a1.56 1.56 0 0 0-2.264-.01 1.704 1.704 0 0 0-.01 2.347l3.198 3.348z"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
